--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   
 
 <h3> Welcome to the first online shopping experience that puts the environment first.</h3>
-<img src="alyssa-strohmann-TS--uNw-JqE-unsplash.jpg" alt="border" style="width:100%">
+<img src="./OOTD_Website_New/website_code/alyssa-strohmann-TS--uNw-JqE-unsplash.jpg" alt="border" style="width:100%">
 
 
 
