fixed page routing and deleted old index.html

--- a/OOTD_Website_New/website_code/index.html
+++ b/OOTD_Website_New/website_code/index.html
@@ -19,10 +19,10 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="index.html">About</a>
-        <a class="nav-item nav-link" href="shopping.html">Shopping</a>
-        <a class="nav-item nav-link" href="index.html">Contact Us</a>
+        <a class="nav-item nav-link active" href="./index.html">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href="./index.html">About</a>
+        <a class="nav-item nav-link" href="./shopping.html">Shopping</a>
+        <a class="nav-item nav-link" href="./index.html">Contact Us</a>
       </div>
     </div>
   </nav>
